# flappy_bird

./: .gitignore  BUILD_AUTOMATION.md  Cargo.toml  Info.plist  README.md  WINDOWS_EMBEDDED_ASSETS.md  build.rs
.github/workflows/: release.yml
FlappyBird.app/Contents/Resources/: AppIcon.icns
scripts/: build_macos_app.sh
src/: audio.rs  components.rs  embedded_assets.rs  main.rs  resources.rs  states.rs  systems.rs
src/systems/: gameplay.rs  menu.rs  physics.rs  setup.rs  ui.rs
