[package]
name = "flappy_bird"
version = "1.3.1"
authors = ["hao"]
edition = "2021"
rust-version = "1.76"
build = "build.rs"

[dependencies]
bevy = { version = "0.16", features = ["default", "vorbis", "jpeg"] }
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
image = "0.24"
winit = "0.30"

# Windows平台资源嵌入 - 统一使用cfg(windows)
[target.'cfg(windows)'.dependencies]
rust-embed = "8.0"

[[bin]]
name = "flappy_bird"
path = "src/main.rs"

[build-dependencies]
fs_extra = "1.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
